<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mark.suchforgot.app.ActivityMain">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_service_btn_text"
        android:id="@+id/activity_main_button_start"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_service_btn_text"
        android:id="@+id/activity_main_button_stop"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_status"
        android:textSize="20sp"
        android:id="@+id/activity_main_textView_service_status"
        android:layout_marginTop="70dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_accelerometer_magnitude"
        android:textSize="20sp"
        android:id="@+id/activity_main_textView_avg_accel"
        android:layout_marginTop="100dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_state"
        android:id="@+id/activity_main_textview_state"
        android:layout_marginTop="200dp"
        android:textSize="50sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
